<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FBFBFB"
    android:visibility="visible"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9340C5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="138dp"
            android:layout_height="36dp"
            android:layout_marginStart="118dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="118dp"
            android:layout_marginBottom="40dp"
            android:background="#00FFFFFF"
            android:text="@string/loginBtn"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/username"
            android:layout_width="284dp"
            android:layout_height="69dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="46dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="@string/email"
            android:backgroundTint="#FFFFFF"
            android:drawableTint="#FFFFFF"
            android:ems="10"
            android:foregroundTint="#FFFFFF"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#FAF7F7"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/password"
            android:layout_width="294dp"
            android:layout_height="76dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="46dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/passwordTxt"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/loginBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="96dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/loginBtn"
            android:textColor="#161515"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="102dp"
            android:layout_height="60dp"
            android:layout_marginStart="154dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="155dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/person"
            app:layout_constraintBottom_toTopOf="@+id/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/account_circle_24dp_e8eaed_fill0_wght400_grad0_opsz24" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="22dp"
            android:layout_height="20dp"
            android:layout_marginStart="58dp"
            android:contentDescription="@string/lock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.258"
            app:srcCompat="@drawable/lock_24dp_e8eaed_fill0_wght400_grad0_opsz24" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="31dp"
            android:layout_height="24dp"
            android:layout_marginStart="58dp"
            android:contentDescription="@string/eye"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.012"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.492"
            app:srcCompat="@drawable/visibility_24dp_e8eaed_fill0_wght400_grad0_opsz24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>