<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9853C3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="209dp"
            android:layout_height="39dp"
            android:layout_marginStart="107dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="1dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sigunUpEmail"
            android:layout_width="277dp"
            android:layout_height="72dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="83dp"
            android:autofillHints="@string/signupEmail"
            android:backgroundTint="#FFFFFF"
            android:drawableTint="#FCFFFFFF"
            android:ems="10"
            android:hint="@string/signupEmail"
            android:inputType="textEmailAddress"
            android:textColorHint="#FBF9F9"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/signUpPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="282dp"
            android:layout_height="69dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="67dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/userName"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#FBF9F9"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/sigunUpEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="284dp"
            android:layout_height="86dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="66dp"
            android:autofillHints="@string/signupPassword"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/signupPassword"
            android:inputType="textPassword"
            android:textColorHint="#FBF9F9"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sigunUpEmail"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="108dp"
            android:backgroundTint="#FFFFFF"
            android:drawableTint="#FFFFFF"
            android:text="@string/signUpBtn"
            android:textAlignment="center"
            android:textColor="#181717"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpPassword"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>